--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "gulp-requirejs": "^0.1.3",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "karma": "^0.12.28",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-mocha": "^0.1.9",
     "mocha": "^2.0.1"
   },
   "scripts": {
-    "test": "gulp mocha"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
