--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "chai": "^1.10.0",
-    "del": "^0.1.3",
-    "gulp": "^3.8.10",
-    "gulp-header": "^1.2.2",
-    "gulp-jshint": "^1.9.0",
-    "gulp-load-plugins": "^0.7.1",
-    "gulp-mocha": "^2.0.0",
-    "gulp-rename": "^1.2.0",
+    "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-header": "^1.7.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-requirejs": "^0.1.3",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "karma": "^0.12.28",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "karma": "^0.13.19",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-ie-launcher": "^0.1.5",
-    "karma-mocha": "^0.1.9",
-    "mocha": "^2.0.1"
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.1",
+    "mocha": "^2.3.4",
+    "rimraf": "^2.5.0"
   },
   "scripts": {
     "test": "gulp test"
